--- a/app/globals.css
+++ b/app/globals.css
@@ -4,10 +4,9 @@
 @custom-variant dark (&:is(.dark *));
 
 @theme inline {
+  --font-sans: var(--font-inter);
   --color-background: var(--background);
   --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
@@ -76,6 +75,7 @@
   --sidebar-ring: oklch(0.705 0.015 286.067);
   --background: oklch(1 0 0);
   --foreground: oklch(0.141 0.005 285.823);
+  --font-inter: Inter, sans-serif;
 }
 
 .dark {
@@ -114,9 +114,51 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50;
+    @apply border-border outline-ring/50 text-sm;
   }
   body {
     @apply bg-background text-foreground;
   }
+}
+
+figure {
+  background-color: var(--figure-bg);
+  outline: 2px solid oklch(37.1% 0 0 / 0.2);
+  outline-offset: 3px;
+  border-radius: 0.4rem;
+  border: 1px solid var(--border);
+}
+
+figcaption {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+  padding: 0.5rem 10rem;
+  font-size: 0.8rem;
+}
+
+pre {
+  scrollbar-width: none;
+  -ms-overflow-style: none;
+  overflow-x: auto;
+  padding: 1rem 0;
+  font-size: 1rem;
+}
+
+pre::-webkit-scrollbar {
+  display: none;
+}
+
+pre [data-line] {
+  padding: 0 1rem;
+}
+
+pre.shiki {
+  @apply !bg-secondary !rounded-md !p-2;
+}
+
+[data-highlighted-line] {
+  @apply border-l-blue-400 bg-orange-100/10;
+}
+
+[data-highlighted-chars] {
+  @apply bg-zinc-500/25 dark:bg-zinc-500/50 rounded shadow-2xl;
 }
